--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -28,6 +28,17 @@
   date = {2019}
 }
 
+@online{ISOIEC270012022,
+  title = {{{ISO}}/{{IEC}} 27001: {{What}}’s New in {{IT}} Security?},
+  shorttitle = {{{ISO}}/{{IEC}} 27001},
+  date = {2022-10-25},
+  url = {https://www.iso.org/cms/render/live/en/sites/isoorg/contents/news/2022/10/new-iso-iec-27001.color-C12.html},
+  urldate = {2023-02-20},
+  abstract = {Cyber-attacks are costly, disruptive and a growing threat to business, governments and society alike. Here’s how to protect your assets.},
+  langid = {english},
+  organization = {{ISO}}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
