BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -36,7 +36,8 @@
   urldate = {2023-02-20},
   abstract = {Cyber-attacks are costly, disruptive and a growing threat to business, governments and society alike. Here’s how to protect your assets.},
   langid = {english},
-  organization = {{ISO}}
+  organization = {{ISO}},
+  file = {/Users/werner/Zotero/storage/BHCDCT4Y/new-iso-iec-27001.html}
 }
 
 @report{Niemann2021abgrenzung,
