BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -35,6 +35,12 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
+@article{RICHTLINIEEU2016,
+  title = {RICHTLINIE  (EU)  2016/  1148  DES  EUROPÄISCHEN  PARLAMENTS  UND  DES  RATES  -  vom  6.  Juli  2016  -  über  Maßnahmen  zur  Gewährleistung  eines  hohen  gemeinsamen  Sicherheitsniveaus  von  Netz-  und  Informationssystemen  in  der  Union},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/3HC9T447/RICHTLINIE  (EU)  2016  1148  DES  EUROPÄISCHEN  .pdf}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
