--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -41,6 +41,17 @@
   file = {/Users/werner/Zotero/storage/3HC9T447/RICHTLINIE  (EU)  2016  1148  DES  EUROPÄISCHEN  .pdf}
 }
 
+@legislation{RichtlinieEU20162016,
+  title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
+  date = {2016-07-06},
+  journaltitle = {OJ L},
+  volume = {194},
+  url = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
+  urldate = {2023-02-20},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
