BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -46,6 +46,13 @@
   file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
 }
 
+@online{RISNetzUnd,
+  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
+  urldate = {2023-02-20},
+  file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
