--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -53,6 +53,13 @@
   file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
 }
 
+@online{RISVerordnungUber,
+  title = {{{RIS}} - {{Verordnung}} Über Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
+  urldate = {2023-02-20},
+  file = {/Users/werner/Zotero/storage/W4ITLUX3/GeltendeFassung.html}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
