--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -35,6 +35,12 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
+@online{OVEONORMISO,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27001:2017 07 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01},
+  urldate = {2023-02-22}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
