--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -28,18 +28,18 @@
   date = {2019}
 }
 
+@online{ISO27001,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27001:2017 07 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/KXYS9DTV/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01.html}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVEONORMISO,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27001:2017 07 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01},
-  urldate = {2023-02-22},
-  file = {/Users/werner/Zotero/storage/KXYS9DTV/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01.html}
 }
 
 @legislation{RichtlinieEU20162016,
