--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -28,7 +28,7 @@
   date = {2019}
 }
 
-@online{ISO27001,
+@misc{ISO27001,
   title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27001:2017 07 01 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01},
   urldate = {2023-02-22},
