BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -29,7 +29,7 @@
 }
 
 @misc{ISO27001,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27001:2017 07 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {Informationstechnik - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/KXYS9DTV/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01.html}
