BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -30,6 +30,7 @@
 
 @misc{ISO27001,
   title = {Informationstechnik - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}} ({{ISO}}/{{IEC}} 27001:2013 Einschließlich {{Cor}} 1:2014 Und {{Cor}} 2:2015)},
+  shorttitle = {{{ISO}} 27001:2013},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   date = {2017-07-01},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01},
