--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -16,6 +16,24 @@
   pages = {276--286}
 }
 
+@inproceedings{guoEnhanceEnterpriseSecurity2021,
+  title = {Enhance {{Enterprise Security}} through {{Implementing ISO}}/{{IEC}} 27001 {{Standard}}},
+  booktitle = {2021 {{IEEE International Conference}} on {{Service Operations}} and {{Logistics}}, and {{Informatics}} ({{SOLI}})},
+  author = {Guo, Huaqun and Wei, Meng and Huang, Ping and Chekole, Eyasu Getahun},
+  date = {2021-12-11},
+  pages = {1--6},
+  publisher = {{IEEE}},
+  location = {{Singapore}},
+  doi = {10.1109/SOLI54607.2021.9672401},
+  url = {https://ieeexplore.ieee.org/document/9672401/},
+  urldate = {2023-02-22},
+  abstract = {The ISO/IEC 27001 standard has been adopted by worldwide organizations and companies. The main contribution of this paper is to systematically address all 21 requirements consisted of 7 mandatories and 14 categories in ISO/IEC 27001 standard when designing and developing information security management system (ISMS) policies. The PDCA model is adopted, and the statement of applicability is assessed. The 13 policies of ISMS are designed to address the individual requirement of ISO/IEC 27001 standard respectively and effectively.},
+  eventtitle = {2021 {{IEEE International Conference}} on {{Service Operations}} and {{Logistics}}, and {{Informatics}} ({{SOLI}})},
+  isbn = {978-1-66546-722-3},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/UMSA5766/Guo et al. - 2021 - Enhance Enterprise Security through Implementing I.pdf}
+}
+
 @misc{IEC_62443-2-1,
   title = {{{EN IEC}} 62443-2-1, {{Security}} for Industrial Automation and Control Systems - {{Part}} 2-1: {{Security}} Program Requirements for {{IACS}} Asset Owners ({{IEC}} 65/756/{{CDV}})},
   author = {{IEC - International Electrotechnical Commission}},
