BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -88,6 +88,24 @@
   file = {/Users/werner/Zotero/storage/W4ITLUX3/GeltendeFassung.html}
 }
 
+@inproceedings{royHighLevelComparisonNIST2020,
+  title = {A {{High-Level Comparison}} between the {{NIST Cyber Security Framework}} and the {{ISO}} 27001 {{Information Security Standard}}},
+  booktitle = {2020 {{National Conference}} on {{Emerging Trends}} on {{Sustainable Technology}} and {{Engineering Applications}} ({{NCETSTEA}})},
+  author = {Roy, Prameet P.},
+  date = {2020-02},
+  pages = {1--3},
+  publisher = {{IEEE}},
+  location = {{Durgapur, India}},
+  doi = {10.1109/NCETSTEA48365.2020.9119914},
+  url = {https://ieeexplore.ieee.org/document/9119914/},
+  urldate = {2023-02-22},
+  abstract = {This paper provides a high-level comparison between the National Institute of Standards and Technology's (NIST) Cyber Security Framework and the ISO 27001 Information Security Standard. Pros, cons and the advantages each framework holds over the other and how an organization would select an appropriate framework between CSF and ISO 27001 have been discussed along with a detailed comparison of how major security controls framework/guidelines like NIST SP 800-53, CIS Top-20 and ISO 27002 can be mapped back to each.},
+  eventtitle = {2020 {{National Conference}} on {{Emerging Trends}} on {{Sustainable Technology}} and {{Engineering Applications}} ({{NCETSTEA}})},
+  isbn = {978-1-72814-362-0},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
