BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -67,6 +67,17 @@
   file = {/Users/werner/Zotero/storage/6L6N2KSV/isoiec-27001-information-security.html}
 }
 
+@online{ISOISOIEC2023a,
+  title = {{{ISO}} - {{ISO}}/{{IEC}} 27001 and Related Standards — {{Information}} Security Management},
+  date = {2023-02-02},
+  url = {https://www.iso.org/isoiec-27001-information-security.html},
+  urldate = {2023-02-22},
+  abstract = {IT security, cybersecurity and privacy protection are vital for companies and organizations today. The ISO/IEC 27000 family of standards keeps them safe.},
+  langid = {english},
+  organization = {{ISO}},
+  file = {/Users/werner/Zotero/storage/EHEKQE2H/isoiec-27001-information-security.html}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
