--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -56,7 +56,7 @@
   file = {/Users/werner/Zotero/storage/KXYS9DTV/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01.html}
 }
 
-@online{ISOISOIEC2023a,
+@online{ISO27001Web,
   title = {{{ISO}} - {{ISO}}/{{IEC}} 27001 and Related Standards — {{Information}} Security Management},
   date = {2023-02-02},
   url = {https://www.iso.org/isoiec-27001-information-security.html},
