--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -74,6 +74,12 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
+@online{OVEONORMISO,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27002:2022 08 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
+  urldate = {2023-02-22}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
