--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -77,7 +77,8 @@
 @online{OVEONORMISO,
   title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27002:2022 08 15 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
-  urldate = {2023-02-22}
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
 }
 
 @legislation{RichtlinieEU20162016,
