--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -46,6 +46,13 @@
   date = {2019}
 }
 
+@online{InformationssicherheitCybersicherheitUnd,
+  title = {Informationssicherheit, {{Cybersicherheit}} Und {{Schutz}} Der {{Privatspähre}} - {{Informationssicherheitsmaßnahmen}} ({{ISO}}/{{IEC}} 27002:2022, Korrigierte {{Fassung}} 2022-03)},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
+}
+
 @misc{ISO27001,
   title = {Informationstechnik - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}} ({{ISO}}/{{IEC}} 27001:2013 Einschließlich {{Cor}} 1:2014 Und {{Cor}} 2:2015)},
   shorttitle = {{{ISO}} 27001:2013},
@@ -72,13 +79,6 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVEONORMISO,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27002:2022 08 15 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
-  urldate = {2023-02-22},
-  file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
 }
 
 @legislation{RichtlinieEU20162016,
