BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -46,8 +46,9 @@
   date = {2019}
 }
 
-@online{InformationssicherheitCybersicherheitUnd,
+@online{iso-internationalorganizationforstandardizationInformationssicherheitCybersicherheitUnd,
   title = {Informationssicherheit, {{Cybersicherheit}} Und {{Schutz}} Der {{Privatspähre}} - {{Informationssicherheitsmaßnahmen}} ({{ISO}}/{{IEC}} 27002:2022, Korrigierte {{Fassung}} 2022-03)},
+  author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
