--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -85,7 +85,8 @@
 @online{OVEONORMISO,
   title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
-  urldate = {2023-02-22}
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
 }
 
 @legislation{RichtlinieEU20162016,
