--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -89,6 +89,12 @@
   file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
 }
 
+@online{OVEONORMISOa,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
+  urldate = {2023-02-22}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
