--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -46,14 +46,6 @@
   date = {2019}
 }
 
-@online{iso-internationalorganizationforstandardizationInformationssicherheitCybersicherheitUnd,
-  title = {Informationssicherheit, {{Cybersicherheit}} Und {{Schutz}} Der {{Privatspähre}} - {{Informationssicherheitsmaßnahmen}} ({{ISO}}/{{IEC}} 27002:2022, Korrigierte {{Fassung}} 2022-03)},
-  author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
-  urldate = {2023-02-22},
-  file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
-}
-
 @misc{ISO27001,
   title = {Informationstechnik - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}} ({{ISO}}/{{IEC}} 27001:2013 Einschließlich {{Cor}} 1:2014 Und {{Cor}} 2:2015)},
   shorttitle = {{{ISO}} 27001:2013},
@@ -75,6 +67,21 @@
   file = {/Users/werner/Zotero/storage/EHEKQE2H/isoiec-27001-information-security.html}
 }
 
+@online{ISO27002,
+  title = {Informationssicherheit, {{Cybersicherheit}} Und {{Schutz}} Der {{Privatspähre}} - {{Informationssicherheitsmaßnahmen}} ({{ISO}}/{{IEC}} 27002:2022, Korrigierte {{Fassung}} 2022-03)},
+  author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
+}
+
+@online{ISO27011,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
@@ -82,17 +89,11 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
-@online{OVEONORMISO,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
-  urldate = {2023-02-22},
-  file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
-}
-
 @online{OVEONORMISOa,
   title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
-  urldate = {2023-02-22}
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/QAAXDDI3/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
 }
 
 @legislation{RichtlinieEU20162016,
