BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -76,7 +76,8 @@
 }
 
 @online{ISO27011,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {Informationstechnik - {{Sicherheitsverfahren}}, {{Leitfaden}} Für {{Informationssicherheitsmaßnahmen}} Auf {{Grundlage}} von {{ISO}}/{{IEC}} 27002 Für {{Telekommunikationsorganisationen}} ({{ISO}}/{{IEC}} 27011:2016)},
+  author = {ISO - International Organization for Standardization},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
