--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -78,6 +78,7 @@
 @online{ISO27011,
   title = {Informationstechnik - {{Sicherheitsverfahren}}, {{Leitfaden}} Für {{Informationssicherheitsmaßnahmen}} Auf {{Grundlage}} von {{ISO}}/{{IEC}} 27002 Für {{Telekommunikationsorganisationen}} ({{ISO}}/{{IEC}} 27011:2016)},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
+  date = {2020-11-15},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
