BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -92,6 +92,12 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
+@online{OVEONORMISO,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27019:2020 07 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15},
+  urldate = {2023-02-22}
+}
+
 @online{OVEONORMISOa,
   title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27011:2020 11 15 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15},
