--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -85,18 +85,19 @@
   file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
 }
 
+@online{ISO27019,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27019:2020 07 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/9BZAFMSL/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15.html}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVEONORMISO,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27019:2020 07 15 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15},
-  urldate = {2023-02-22},
-  file = {/Users/werner/Zotero/storage/9BZAFMSL/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15.html}
 }
 
 @legislation{RichtlinieEU20162016,
