BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -86,7 +86,7 @@
 }
 
 @online{ISO27019,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27019:2020 07 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {Informationstechnik - {{Sicherheitsverfahren}}, {{Informationssicherheitsmaßnahmen}} Für Die {{Energieversorgung}} ({{ISO}}/{{IEC}} 27019:2017, Korrigierte {{Fassung}} 2019-08)},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15},
   urldate = {2023-02-22},
