--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -47,7 +47,7 @@
 }
 
 @misc{ISO27001,
-  title = {Informationstechnik - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}} ({{ISO}}/{{IEC}} 27001:2013 Einschließlich {{Cor}} 1:2014 Und {{Cor}} 2:2015)},
+  title = {{{EN ISO}}/{{IEC}} 27001:2013, {{Informationstechnik}} - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}} (Einschließlich {{Cor}} 1:2014 Und {{Cor}} 2:2015)},
   shorttitle = {{{ISO}} 27001:2013},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   date = {2017-07-01},
