BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -68,7 +68,7 @@
 }
 
 @online{ISO27002,
-  title = {Informationssicherheit, {{Cybersicherheit}} Und {{Schutz}} Der {{Privatspähre}} - {{Informationssicherheitsmaßnahmen}} ({{ISO}}/{{IEC}} 27002:2022, Korrigierte {{Fassung}} 2022-03)},
+  title = {{{EN ISO}}/{{IEC}}:27002:2022, {{Informationssicherheit}}, {{Cybersicherheit}} Und {{Schutz}} Der {{Privatspähre}} - {{Informationssicherheitsmaßnahmen}} (Korrigierte {{Fassung}} 2022-03)},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   date = {2022-08-15},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15},
