--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -86,8 +86,9 @@
 }
 
 @online{ISO27019,
-  title = {{{EN ISO}}/{{IEC}} 27019, {{Informationstechnik}} - {{Sicherheitsverfahren}}, {{Informationssicherheitsmaßnahmen}} Für Die {{Energieversorgung}} ({{ISO}}/{{IEC}} 27019:2017, Korrigierte {{Fassung}} 2019-08)},
+  title = {{{EN ISO}}/{{IEC}} 27019:2017, {{Informationstechnik}} - {{Sicherheitsverfahren}}, {{Informationssicherheitsmaßnahmen}} Für Die {{Energieversorgung}} (Korrigierte {{Fassung}} 2019-08)},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
+  date = {2020-07-15},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/9BZAFMSL/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15.html}
