--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -101,6 +101,12 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
+@online{ONORMISO27799,
+  title = {{{ÖNORM EN ISO}} 27799:2016 12 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
+  urldate = {2023-02-22}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
