BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -94,17 +94,18 @@
   file = {/Users/werner/Zotero/storage/9BZAFMSL/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15.html}
 }
 
+@online{ISO27799,
+  title = {{{ÖNORM EN ISO}} 27799:2016 12 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{ONORMISO27799,
-  title = {{{ÖNORM EN ISO}} 27799:2016 12 15 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
-  urldate = {2023-02-22}
 }
 
 @legislation{RichtlinieEU20162016,
