BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -96,6 +96,7 @@
 
 @online{ISO27799,
   title = {{{EN ISO}} 27799:2016, {{Health}} Informatics - {{Information}} Security Management in Htealth Using {{ISO}}/{{IEC}} 27002},
+  date = {2016-12-15},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
