BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -46,6 +46,14 @@
   date = {2019}
 }
 
+@online{ISO27000,
+  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27000:2020 05 15 - {{Lesesaal}} - {{Austrian Standards}}},
+  author = {ISO - International Organization for Standardization},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/676649/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15},
+  urldate = {2023-02-22},
+  file = {/Users/werner/Zotero/storage/XAZA8XAU/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15.html}
+}
+
 @misc{ISO27001,
   title = {{{EN ISO}}/{{IEC}} 27001:2013, {{Informationstechnik}} - {{Sicherheitsverfahren}} - {{Informationssicherheitsmanagementsysteme}} - {{Anforderungen}} (Einschließlich {{Cor}} 1:2014 Und {{Cor}} 2:2015)},
   shorttitle = {{{ISO}} 27001:2013},
@@ -108,12 +116,6 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVEONORMISO,
-  title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27000:2020 05 15 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/676649/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15},
-  urldate = {2023-02-22}
 }
 
 @legislation{RichtlinieEU20162016,
