--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -49,6 +49,7 @@
 @online{ISO27000,
   title = {{{ÖVE}}/{{ÖNORM EN ISO}}/{{IEC}} 27000:2020 05 15 - {{Lesesaal}} - {{Austrian Standards}}},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
+  date = {2022-05-15},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/676649/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/XAZA8XAU/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15.html}
