--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -122,7 +122,8 @@
 @online{OVE5060012019,
   title = {{{OVE EN}} 50600-1:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
-  urldate = {2023-02-26}
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
 @online{OVE50600212021,
