--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -138,6 +138,12 @@
   urldate = {2023-02-26}
 }
 
+@online{OVE50600232019,
+  title = {{{OVE EN}} 50600-2-3:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661517/OVE_EN_50600-2-3_2019_09_01},
+  urldate = {2023-02-26}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
