--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -144,6 +144,12 @@
   urldate = {2023-02-26}
 }
 
+@online{OVEONORM5060024,
+  title = {{{ÖVE}}/{{ÖNORM EN}} 50600-2-4:2015 08 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
+  urldate = {2023-02-26}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
