BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -155,7 +155,8 @@
 @online{OVEONORM5060024,
   title = {{{ÖVE}}/{{ÖNORM EN}} 50600-2-4:2015 08 01 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
-  urldate = {2023-02-26}
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
 }
 
 @legislation{RichtlinieEU20162016,
