BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -143,13 +143,15 @@
 @online{OVE50600232019,
   title = {{{OVE EN}} 50600-2-3:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661517/OVE_EN_50600-2-3_2019_09_01},
-  urldate = {2023-02-26}
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/EAD2DP3A/OVE_EN_50600-2-3_2019_09_01.html}
 }
 
 @online{OVE50600252021,
   title = {{{OVE EN}} 50600-2-5:2021 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01},
-  urldate = {2023-02-26}
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
 @online{OVEONORM5060024,
