--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -8,6 +8,13 @@
   urldate = {2022-10-01}
 }
 
+@online{EN50600-1,
+  title = {{{OVE EN}} 50600-1:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
+}
+
 @article{Fluchsot,
   title = {{{OT-Security}} von Der Norm Ins Leitsystem},
   author = {Fluchs, Sarah und Rudolph, Heiko},
@@ -117,13 +124,6 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVE5060012019,
-  title = {{{OVE EN}} 50600-1:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
 @online{OVE50600212021,
