BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -15,6 +15,20 @@
   file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
+@online{EN50600-2-1,
+  title = {{{OVE EN}} 50600-2-1:2021 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
+}
+
+@online{EN50600-2-2,
+  title = {{{OVE EN}} 50600-2-2:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
+}
+
 @article{Fluchsot,
   title = {{{OT-Security}} von Der Norm Ins Leitsystem},
   author = {Fluchs, Sarah und Rudolph, Heiko},
@@ -124,20 +138,6 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVE50600212021,
-  title = {{{OVE EN}} 50600-2-1:2021 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
-}
-
-@online{OVE50600222019,
-  title = {{{OVE EN}} 50600-2-2:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
 }
 
 @online{OVE50600232019,
