BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -36,6 +36,13 @@
   file = {/Users/werner/Zotero/storage/EAD2DP3A/OVE_EN_50600-2-3_2019_09_01.html}
 }
 
+@online{EN50600-2-4,
+  title = {{{ÖVE}}/{{ÖNORM EN}} 50600-2-4:2015 08 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
+}
+
 @article{Fluchsot,
   title = {{{OT-Security}} von Der Norm Ins Leitsystem},
   author = {Fluchs, Sarah und Rudolph, Heiko},
@@ -152,13 +159,6 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
-}
-
-@online{OVEONORM5060024,
-  title = {{{ÖVE}}/{{ÖNORM EN}} 50600-2-4:2015 08 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
 }
 
 @legislation{RichtlinieEU20162016,
