--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -43,6 +43,13 @@
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
 }
 
+@online{EN50600-2-5,
+  title = {{{OVE EN}} 50600-2-5:2021 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
+}
+
 @article{Fluchsot,
   title = {{{OT-Security}} von Der Norm Ins Leitsystem},
   author = {Fluchs, Sarah und Rudolph, Heiko},
@@ -152,13 +159,6 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{OVE50600252021,
-  title = {{{OVE EN}} 50600-2-5:2021 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
 @legislation{RichtlinieEU20162016,
