--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -37,7 +37,7 @@
 }
 
 @online{EN50600-2-4,
-  title = {{{ÖVE}}/{{ÖNORM EN}} 50600-2-4:2015 08 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {{{EN}} 50600-2-4:2015; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-4: {{Infrastruktur}} Der {{Telekommunikationsverkabelung}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
