--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -23,7 +23,7 @@
 }
 
 @online{EN50600-2-2,
-  title = {{{OVE EN}} 50600-2-2:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
