--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -16,7 +16,7 @@
 }
 
 @online{EN50600-2-1,
-  title = {{{OVE EN}} 50600-2-1:2021 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {{{EN}} 50600-2-1:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-1: {{Gebäudekonstruktion}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
