BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -8,14 +8,14 @@
   urldate = {2022-10-01}
 }
 
-@online{EN50600-1,
-  title = {{{OVE EN}} 50600-1:2019 09 01 - {{Lesesaal}} - {{Austrian Standards}}},
+@misc{EN50600-1,
+  title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
-@online{EN50600-2-1,
+@misc{EN50600-2-1,
   title = {{{EN}} 50600-2-1:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-1: {{Gebäudekonstruktion}}},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01},
   urldate = {2023-02-26},
