--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -146,7 +146,7 @@
 }
 
 @online{ISO27799,
-  title = {{{EN ISO}} 27799:2016, {{Health}} Informatics - {{Information}} Security Management in Htealth Using {{ISO}}/{{IEC}} 27002},
+  title = {{{EN ISO}} 27799:2016, {{Health}} Informatics - {{Information}} Security Management in Health Using {{ISO}}/{{IEC}} 27002},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   date = {2016-12-15},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
