BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,3 +1,11 @@
+@online{austrianstandardsinternationalONORM770042019,
+  title = {{{ÖNORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
+  author = {Austrian Standards International},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
+}
+
 @misc{BKA_BMI_NIS_Fact_Sheet_9/2022,
   title = {Sicherheitsmaßnahmen Für Betreiber Wesentlicher Dienste 09/2022 ("{{NIS Fact Sheet}} 9/2022")},
   author = {{Bundeskanzleramt und Bundesministerium für Inneres}},
@@ -159,13 +167,6 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
-}
-
-@online{ONORM770042019,
-  title = {{{ÖNORM A}} 7700-4:2019 10 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
 @legislation{RichtlinieEU20162016,
