--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,6 +1,7 @@
-@online{austrianstandardsinternationalONORM770042019,
+@online{austrianstandardsinternationalONORM7700420192019,
   title = {{{ÖNORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
   author = {Austrian Standards International},
+  date = {2019-10-19},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
