BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -50,6 +50,7 @@
 
 @misc{EN50600-2-4,
   title = {{{EN}} 50600-2-4:2015; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-4: {{Infrastruktur}} Der {{Telekommunikationsverkabelung}}},
+  author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
