BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,3 +1,11 @@
+@online{a-sitOsterreichischesInformationssicherheitshandbuch,
+  title = {Österreichisches {{Informationssicherheitshandbuch}}},
+  author = {A-SIT},
+  url = {https://www.sicherheitshandbuch.gv.at/},
+  urldate = {2023-02-27},
+  file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
+}
+
 @misc{BKA_BMI_NIS_Fact_Sheet_9/2022,
   title = {Sicherheitsmaßnahmen Für Betreiber Wesentlicher Dienste 09/2022 ("{{NIS Fact Sheet}} 9/2022")},
   author = {{Bundeskanzleramt und Bundesministerium für Inneres}},
@@ -174,13 +182,6 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
-}
-
-@online{OsterreichischesInformationssicherheitshandbuch,
-  title = {Österreichisches {{Informationssicherheitshandbuch}}},
-  url = {https://www.sicherheitshandbuch.gv.at/},
-  urldate = {2023-02-27},
-  file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
 }
 
 @legislation{RichtlinieEU20162016,
