BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,6 +1,6 @@
-@online{a-sitOsterreichischesInformationssicherheitshandbuch,
+@misc{a-sitOsterreichischesInformationssicherheitshandbuch,
   title = {Österreichisches {{Informationssicherheitshandbuch}}},
-  author = {A-SIT},
+  author = {A-SIT and Bundeskanzleramt},
   url = {https://www.sicherheitshandbuch.gv.at/},
   urldate = {2023-02-27},
   file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
