BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,6 +1,7 @@
-@misc{a-sitOsterreichischesInformationssicherheitshandbuch,
+@misc{a-sitOsterreichischesInformationssicherheitshandbuch2023,
   title = {Österreichisches {{Informationssicherheitshandbuch}}},
   author = {A-SIT and Bundeskanzleramt},
+  date = {2023-02-23},
   url = {https://www.sicherheitshandbuch.gv.at/},
   urldate = {2023-02-27},
   file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
