BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -181,7 +181,7 @@
   date = {2023-02-23},
   url = {https://www.sicherheitshandbuch.gv.at/},
   urldate = {2023-02-27},
-  file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
+  file = {/Users/werner/Zotero/storage/NYYLZETX/sicherheitshandbuch.pdf;/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
 }
 
 @online{OENORM7700-4,
