BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -9,6 +9,7 @@
 }
 
 @misc{CISCSC,
+  title = {{{CIS Critical Security Controls Version}} 8},
   author = {Center for Internet Security (CIS)},
   file = {/Users/werner/Zotero/storage/EFU7FAFI/_.pdf}
 }
