BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -10,7 +10,9 @@
 
 @misc{CISCSC,
   title = {{{CIS Critical Security Controls Version}} 8},
+  shorttitle = {{{CIS CSC V8}}},
   author = {Center for Internet Security (CIS)},
+  date = {2021},
   file = {/Users/werner/Zotero/storage/EFU7FAFI/_.pdf}
 }
 
