BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -13,6 +13,7 @@
   shorttitle = {{{CIS CSC V8}}},
   author = {Center for Internet Security (CIS)},
   date = {2021},
+  url = {https://www.cisecurity.org/controls},
   file = {/Users/werner/Zotero/storage/EFU7FAFI/_.pdf}
 }
 
