BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -181,6 +181,15 @@
   file = {/Users/werner/Zotero/storage/HJ2EJ2WY/cyberrisk-2023-schema-de.pdf}
 }
 
+@online{KSOE_WEB,
+  title = {Cyber Trust Austria - Kompetenzzentrum Sicheres Österreich},
+  author = {{r}},
+  url = {https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/, https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/},
+  urldate = {2023-03-01},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
@@ -204,15 +213,6 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
-}
-
-@online{rCyberTrustAustria,
-  title = {Cyber Trust Austria - Kompetenzzentrum Sicheres Österreich},
-  author = {{r}},
-  url = {https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/, https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/},
-  urldate = {2023-03-01},
-  langid = {ngerman},
-  file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
 }
 
 @legislation{RichtlinieEU20162016,
