BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -113,6 +113,15 @@
   file = {/Users/werner/Zotero/storage/UMSA5766/Guo et al. - 2021 - Enhance Enterprise Security through Implementing I.pdf}
 }
 
+@article{hevnerPragmaticApproachIdentifying2018,
+  title = {A Pragmatic Approach for Identifying and Managing Design Science Research Goals and Evaluation Criteria},
+  author = {Hevner, Alan and Prat, Nicolas and Comyn-Wattiau, Isabelle and Akoka, Jacky},
+  date = {2018},
+  abstract = {The effectiveness of a Design Science Research (DSR) project is judged both by the fitness of the designed artifact as a solution in the application environment and by the level of new research contributions. An important and understudied challenge is how to translate DSR project research goals into discrete and measurable evaluation criteria for use in the DSR processes. This position paper proposes an inclusive approach for articulating DSR goals and then identifying project evaluation criteria for these goals. The goals are organized hierarchically as utilitarian goals, safety goals, interaction and communication goals, cognitive and aesthetic goals, innovation goals, and evolution goals. Goals in a DSR project are identified pragmatically by considering the components of the context coupled with the hierarchy of goals. Based on the identified goals, the associated evaluation criteria are determined and organized along the same hierarchy. These criteria measure the ability of the artifact to meet its goals in its context (immediate fitness). Moreover, our approach also supports the innovation and research contributions of the project. The apex of the goal hierarchy addresses the identification of criteria measuring the fitness for evolution of the designed artifact, to accommodate for changes in goals or context.},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/8NUI67KR/Hevner et al. - 2018 - A pragmatic approach for identifying and managing .pdf}
+}
+
 @misc{IEC_62443-2-1,
   title = {{{EN IEC}} 62443-2-1, {{Security}} for Industrial Automation and Control Systems - {{Part}} 2-1: {{Security}} Program Requirements for {{IACS}} Asset Owners ({{IEC}} 65/756/{{CDV}})},
   author = {{IEC - International Electrotechnical Commission}},
