BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -134,6 +134,24 @@
   date = {2019}
 }
 
+@incollection{IntroDesignScience2020,
+  title = {Introduction to {{Design Science Research}}},
+  booktitle = {Design {{Science Research}}. {{Cases}}},
+  author = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
+  editor = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
+  options = {useprefix=true},
+  date = {2020},
+  series = {Progress in {{IS}}},
+  pages = {1--13},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-030-46781-4_1},
+  url = {http://link.springer.com/10.1007/978-3-030-46781-4_1},
+  urldate = {2023-03-06},
+  isbn = {978-3-030-46780-7 978-3-030-46781-4},
+  langid = {english}
+}
+
 @online{ISO27000,
   title = {{{EN ISO}}/{{IEC}} 27000:2020, {{Informationstechnik}} - {{Sicherheitsverfahren}}, {{Informationssicherheitsmanagementsysteme}} - {{Überblick}} Und {{Terminologie}}},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
@@ -283,24 +301,6 @@
   isbn = {978-1-72814-362-0},
   langid = {english},
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
-}
-
-@incollection{vombrockeIntroductionDesignScience2020,
-  title = {Introduction to {{Design Science Research}}},
-  booktitle = {Design {{Science Research}}. {{Cases}}},
-  author = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
-  editor = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
-  options = {useprefix=true},
-  date = {2020},
-  series = {Progress in {{IS}}},
-  pages = {1--13},
-  publisher = {{Springer International Publishing}},
-  location = {{Cham}},
-  doi = {10.1007/978-3-030-46781-4_1},
-  url = {http://link.springer.com/10.1007/978-3-030-46781-4_1},
-  urldate = {2023-03-06},
-  isbn = {978-3-030-46780-7 978-3-030-46781-4},
-  langid = {english}
 }
 
 @incollection{zotero-367,
